docs: configuración de JavaFX